# ros2-robotics-journey

install/my_robot_pkg/lib/my_robot_pkg/: minimal_cpp_publisher  motor_service  my_first_node  sensor_publisher
install/my_robot_pkg/share/ament_index/resource_index/parent_prefix_path/: my_robot_pkg
install/my_robot_pkg/share/my_robot_pkg/: local_setup.sh  package.ps1  package.sh
log/: latest_build  latest_list
src/my_robot_pkg/: CMakeLists.txt  package.xml
src/my_robot_pkg/launch/: robot_system.launch.py
src/my_robot_pkg/src/: motor_service.cpp  my_first_node.cpp  robot_controller.cpp  sensor_publisher.cpp
